--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -32,5 +32,13 @@
         "passwordCopy": "Wpisz hasło"
       }
     }
+  },
+  "management": {
+    "news": "Aktualności",
+    "managementInfo": "Zarządzenia",
+    "composition": "Skład"
+  },
+  "userPanel": {
+    "logout": "Wyloguj"
   }
 }
